Fixed reference issue with pictures. Included jpg and png files. Also made headers in main part of page visible

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@ h1 {
    text-align: center;
 }
 
+h2 {
+    font-family: verdana;
+    font-weight: 300;
+    color: white;
+    font-size: 42px;
+}
+
 nav {
     color: aquamarine;
     text-align: center;
